@@ -15,6 +15,8 @@ Makefile$
 ^blib
 ^cover_db
 ^files/
-pm_to_blib$
+^pm_to_blib$
+^script/
+^test/
 ^xt/
 ~$
