@@ -4,7 +4,7 @@ use warnings;
 use strict;
 use 5.006;
 
-our $VERSION = '0.01';
+our $VERSION = '0.02';
 
 use Git::Repository::Plugin;
 our @ISA = qw( Git::Repository::Plugin );
